--- a/assembl/static2/css/components/navbar.scss
+++ b/assembl/static2/css/components/navbar.scss
@@ -67,7 +67,12 @@
   }
 
   .navbar-language {
-    margin: 2px 0 0 5px;
+    margin: 1px 0 0 5px;
+
+    .caret {
+        position: relative;
+        left: 0.3em;
+    }
   }
 }
 
